# src/app/services/models/change-password-request-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ChangePasswordRequestDto {
+  newPassword?: string;
+  oldPassword?: string;
+}
